--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -52,6 +52,10 @@
 .font-serif {
   font-family: 'Playfair Display', serif;
 }
+body {
+  background-color: #fff9f0;
+  
+}
 
 ul,
 ol {
@@ -74,7 +78,7 @@ nav {
   width: 100%;
   display: grid;
   border-bottom: 1px solid #ccc;
-  grid-template-areas: ". logo logo logo cart";
+  grid-template-areas: ". logo logo logo logo logo cart";
 }
 
 /* .logo {
@@ -93,11 +97,27 @@ nav .logo {
   grid-area: logo;
 } */
 
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
 nav > a {
   grid-area: logo;
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 1px
 }
 
 .nav-cart {
@@ -260,11 +280,10 @@ button,
 }
 
 .button-Order {
-  border: 1px solid var(--primary);
+  border: 1px solid rgb(218, 47, 4);
   background-color: transparent;
-  color: var(--primary);
-  font-family: var(--font);
-  font-size: 20px;
+  color: rgba(218, 47, 4, 0.9);
+  font-size: 25px;
   padding: 5px 15px;
   border-radius: 5px;
   display: inline-block;
@@ -272,7 +291,7 @@ button,
 }
 
 .button {
-  border: 1px solid var(--primary);
+  border: 1px solid rgba(218, 47, 4, 0.7);
   background-color: rgba(218, 47, 4, 0.7); /* var(--primary) with 60% opacity */
   color: var(--background);
   font-family: var(--font);
