--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -569,3 +569,28 @@ td img {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+
+/*  invoice style */
+/* @media print {
+  body * {
+    visibility: hidden;
+  }
+  
+  #invoice-content,
+  #invoice-content * {
+    visibility: visible;
+  }
+  
+  #invoice-content {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+  }
+
+  @page {
+    size: A4;
+    margin: 2cm;
+  }
+} */
