--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -570,6 +570,23 @@ td img {
   to { transform: rotate(360deg); }
 }
 
+@layer utilities {
+  @variants responsive {
+    .text-shadow {
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+    }
+    .tap-highlight-none {
+      -webkit-tap-highlight-color: transparent;
+    }
+  }
+}
+
+@media (min-width: 1920px) {
+  .max-w-7xl {
+    max-width: 1536px;
+  }
+}
+
 
 /*  invoice style */
 /* @media print {
